--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
             "type": "java",
             "name": "CodeLens (Launch) - Main",
             "request": "launch",
+            "mainClass": "frc.robot.Main",
+            "projectName": "2019 6000 (VSCODE) - BACKUP"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Main",
+            "request": "launch",
             "mainClass": "org.usfirst.frc.team6000.robot.Main",
             "projectName": "2019 6000 (VSCODE)"
         },
